<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llFilterBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="12dp">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Sort Options -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/sort_by"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/sortOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbOldToNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_to_new" />

        <RadioButton
            android:id="@+id/rbNewToOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_old" />

        <RadioButton
            android:id="@+id/rbPriceHighToLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_high_to_low" />

        <RadioButton
            android:id="@+id/rbPriceLowToHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_low_to_high" />
    </RadioGroup>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#E0E0E0" />

    <!-- Brand Filter -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/brandSearch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/selector_search_view"
        android:drawableStart="@drawable/ic_search"
        android:hint="Search"
        android:padding="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:id="@+id/brandCheckboxContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="#E0E0E0" />

    <!-- Model Filter -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/modelSearch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/selector_search_view"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search"
        android:padding="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:id="@+id/modelCheckboxContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/btnApplyFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ultramarine_blue"
        android:gravity="center"
        android:text="@string/primary"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        tools:ignore="SpUsage" />
</LinearLayout>
