<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SearchView
        android:id="@+id/svProduct"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="14dp"
        android:background="@drawable/selector_search_view"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_for_product"
        android:searchHintIcon="@drawable/ic_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFilterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintStart_toStartOf="@+id/svProduct"
        app:layout_constraintTop_toBottomOf="@+id/svProduct"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/button_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/light_silver"
        android:text="@string/select_filter"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tvFilterTitle"
        app:layout_constraintEnd_toEndOf="@+id/svProduct"
        app:layout_constraintTop_toBottomOf="@+id/svProduct" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="@+id/svProduct"
        app:layout_constraintStart_toStartOf="@+id/svProduct"
        app:layout_constraintTop_toBottomOf="@+id/button_filter"
        app:spanCount="2"
        tools:listitem="@layout/product_item" />


</androidx.constraintlayout.widget.ConstraintLayout>