<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBarDetail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/tvProductTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_image_placeholder" />

    <TextView
        android:id="@+id/tvProductTitle"
        style="@style/textViewMontserratRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProduct"
        tools:text="Apple iPhone 14" />

    <TextView
        android:id="@+id/tvProductDesc"
        style="@style/textViewMontserratRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:maxLines="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvProductTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvProductTitle"
        tools:text="@string/lorem_medium" />


    <TextView
        android:id="@+id/tvPriceTitle"
        style="@style/textViewMontserratRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/ultramarine_blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/tvProductPrice"
        app:layout_constraintStart_toStartOf="@+id/tvProductPrice"
        tools:ignore="SpUsage"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/tvProductPrice"
        style="@style/textViewMontserratRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddToCart"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage"
        tools:text="115,19 ₺" />

    <TextView
        android:id="@+id/btnAddToCart"
        style="@style/textViewMontserratRegular"
        android:layout_width="182dp"
        android:layout_height="38dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>